--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -1,6 +1,14 @@
 ---
-title: Test
-tags: New
+title: Test: This is my first post.
+tags: test
+layout: article
+article_header:
+  type: overlay
+  theme: dark
+  background_color: '#203028'
+  background_image:
+    gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
+    src: /docs/assets/images/cover3.jpg
 ---
 
 Hellow, world!
