--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -1,5 +1,5 @@
 ---
-title: Test-- This is my first post.
+title: Test -- This is my first post
 tags: test
 layout: article
 article_header:
@@ -12,3 +12,5 @@ article_header:
 ---
 
 Hellow, world!
+
+風立ちぬ、いぎ生きめやも.
