--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -2,6 +2,7 @@
 title: Test -- This is my first post
 tags: test
 layout: article
+mode: immersive
 article_header:
   type: overlay
   theme: dark
@@ -11,6 +12,6 @@ article_header:
     src: /docs/assets/images/cover3.jpg
 ---
 
-Hellow, world!
+Hello, world!
 
 風立ちぬ、いぎ生きめやも.
