--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -1,5 +1,5 @@
 ---
-title: Test -- This is my first post
+title: Test -- This is my first post.
 tags: test
 layout: article
 mode: immersive
@@ -13,5 +13,6 @@ article_header:
 ---
 
 Hello, world!
+
 
 風立ちぬ、いぎ生きめやも.
