--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -1,5 +1,5 @@
 ---
-title: Test -- This is my first post.
+title: Test -- This is my first post
 tags: test
 layout: article
 mode: immersive
@@ -12,6 +12,8 @@ article_header:
     src: /docs/assets/images/cover3.jpg
 ---
 
-## Hello, world
+Hello, world!
+
+## Quote
 
 風立ちぬ、いぎ生きめやも.
