--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -1,19 +1,38 @@
 ---
-title: Test -- This is my first post
-tags: test
 layout: article
+title: Page - Article Header Image (Immersive + Translucent Header)
+permalink: /page/article-header-cover-image-immersive-translucent-header.html
+key: page-article-header-cover-image-ITH
+cover: /docs/assets/images/axure/page-article-header-cover-image-immersive-translucent-header.jpg
 mode: immersive
-article_header:
-  type: overlay
+header:
   theme: dark
-  background_color: '#203028'
-  background_image:
-    gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
-    src: /docs/assets/images/cover3.jpg
+article_header:
+  type: cover
+  image:
+    src: /docs/assets/images/cover2.jpg
 ---
 
-Hello, world!
+A post has an image article header in immersive mode with a translucent header.
 
-## Quote
+<!--more-->
 
-風立ちぬ、いぎ生きめやも.
+<style>
+  .page__header .header__brand path {
+    fill: rgba(255, 255, 255, .95);
+  }
+</style>
+
+**front matter:**
+
+    ---
+    layout: article
+    title: Page - Article Header Image (Immersive + Translucent Header)
+    mode: immersive
+    header:
+      theme: dark
+    article_header:
+      type: cover
+      image:
+        src: /docs/assets/images/cover2.jpg
+    ---
