--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -11,6 +11,11 @@ article_header:
   type: cover
   image:
     src: /docs/assets/images/cover2.jpg
+  type: overlay
+  theme: dark
+  background_color: '#203028'
+  background_image:
+    gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
 ---
 
 A post has an image article header in immersive mode with a translucent header.
