--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -11,7 +11,7 @@ article_header:
   type: cover
   image:
     src: /docs/assets/images/cover2.jpg
-  type: cover
+  type: overlay
   theme: dark
   background_color: '#203028'
   background_image:
