--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -10,7 +10,7 @@ header:
 article_header:
   type: cover
   image:
-    src: /docs/assets/images/cover2.jpg
+    src: ./docs/assets/images/cover2.jpg
   type: overlay
   theme: dark
   background_color: '#203028'
