--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -9,8 +9,8 @@ header:
   theme: dark
 article_header:
   type: cover
-  image:
-    src: https://github.com/Jiang-JK/Jiang-JK.github.io/docs/assets/images/cover2.jpg
+  image: /docs/assets/images/cover2.jpg
+    src: /docs/assets/images/cover2.jpg
   type: overlay
   theme: dark
   background_color: '#203028'
