--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: Page - Article Header Image (Immersive + Translucent Header)
+title: Test Page 1
 permalink: /page/article-header-cover-image-immersive-translucent-header.html
 key: page-article-header-cover-image-ITH
 cover: /docs/assets/images/axure/page-article-header-cover-image-immersive-translucent-header.jpg
@@ -28,7 +28,11 @@ A post has an image article header in immersive mode with a translucent header.
   }
 </style>
 
-Hello!
+## Hello
+
+This is my first page!
+
+$$ e^{i\pi}=1.$$
 
 **front matter:**
 
