--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -10,7 +10,7 @@ header:
 article_header:
   type: cover
   image: 
-    src: https://github.com/Jiang-JK/Jiang-JK.github.io/blob/master/docs/assets/images/cover3.jpg
+    src: "https://github.com/Jiang-JK/Jiang-JK.github.io/blob/master/docs/assets/images/cover3.jpg"
   type: overlay
   theme: dark
   background_color: '#203028'
