--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -8,9 +8,7 @@ mode: immersive
 header:
   theme: dark
 article_header:
-  type: cover
-  image: 
-    src: "https://github.com/Jiang-JK/Jiang-JK.github.io/blob/master/docs/assets/images/cover3.jpg"
+  image: "https://github.com/Jiang-JK/Jiang-JK.github.io/blob/master/docs/assets/images/cover3.jpg" 
   type: overlay
   theme: dark
   background_color: '#203028'
@@ -18,9 +16,10 @@ article_header:
     gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
 ---
 
-<!--more-->
 
 A post has an image article header in immersive mode with a translucent header.
+
+<!--more-->
 
 <style>
   .page__header .header__brand path {
