--- a/_posts/2024-03-04-test.md
+++ b/_posts/2024-03-04-test.md
@@ -8,12 +8,12 @@ mode: immersive
 header:
   theme: dark
 article_header:
-  image: "https://github.com/Jiang-JK/Jiang-JK.github.io/blob/master/docs/assets/images/cover3.jpg" 
+  background_image: "https://github.com/Jiang-JK/Jiang-JK.github.io/blob/master/docs/assets/images/cover3.jpg" 
   type: overlay
   theme: dark
   background_color: '#203028'
-  background_image:
-    gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
+  # background_image:
+    # gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
 ---
 
 
@@ -31,7 +31,7 @@ A post has an image article header in immersive mode with a translucent header.
 
 This is my first page!
 
-$$ e^{i\pi}=1.$$
+$$ E_n^1 = \bra{\psi_n^0} H^{'} \ket{\psi_n^0}, \psi_n^1 = \sum_{m\neq n}\frac{\bra{\psi_m^0}H^{{'}}\ket{\psi_n^0}}{E_n^0-E_m^0}\psi_m^0.$$
 
 **front matter:**
 
